// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlockSkeleton /> should render a block skeleton 1`] = `
<BlockSkeleton
  showSkeleton={true}
>
  <styled.span>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "iGZNSN",
            "rules": Array [
              "
  border-radius: 4px;
  line-height: 1rem;
  width: ",
              [Function],
              ";
  height: ",
              [Function],
              ";
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="iGZNSN"
      />
    </StyledComponent>
  </styled.span>
</BlockSkeleton>
`;

exports[`<BlockSkeleton /> should render a block skeleton with set width and height 1`] = `
<BlockSkeleton
  height={200}
  showSkeleton={true}
  width={400}
>
  <styled.span
    height="200px"
    width="400px"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "jLAxRj",
            "rules": Array [
              "
  border-radius: 4px;
  line-height: 1rem;
  width: ",
              [Function],
              ";
  height: ",
              [Function],
              ";
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      height="200px"
      width="400px"
    >
      <span
        className="jLAxRj"
        height="200px"
        width="400px"
      />
    </StyledComponent>
  </styled.span>
</BlockSkeleton>
`;
